style/news.css
/* News styles
 * Written by Georgi D. Sotirov <gdsotirov@dir.bg>
 * $Id: news.css,v 1.5 2006/06/12 18:54:39 gsotirov Exp $
 */

@media screen {
  div#content {
    margin-right: 14em;
  }

  div#header {
    border-bottom: 2px solid #aaa;
    margin-bottom: 1em;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
  }

  div#header h1 {
    margin: 0;
    padding: 0;
    text-align: left;
  }

  div#navigation ul {
    list-style-image: none;
    list-style-type: none;
    margin-left: 0.3em;
  }

  div#sidebar {
    float: right;
    width: 13em;
  }

  div#sidebar map, div#sidebar div {
    border: 2px solid #aaa;
    margin-bottom: 1em;
  }

  div#sidebar input[type=text] {
    background-color: inherit;
    border: 1px solid #aaa;
  }

  div#sidebar h2 {
    background-color: #ddd;
    border-bottom: 2px solid #aaa;
    padding: 0.1em;
    margin: 0;
  }

  div#sidebar ul, div#sidebar form, div#sidebar p {
    padding: 0.5em;
    margin: 0;
  }

  map#nav_gen {
    position: absolute;
    top: 1em;
    right: 1em;
  }

  map#nav_gen li {
    display: inline;
  }

  .mark {
     background-color: #ff0;
  }
}

